tests/errors/compiler/coma_in_enum/coma_in_enum_class_2.c
enum class { a, b c} tmp;

int main() {
	return 0;
}
